--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,12 @@
 <body>
 <h1>简单的注册登陆系统</h1>
 <hr>
+
 <form method="post">
     用户名:<input type="text" id="user_name" name="user_name" value="">
     密码:<input type="password" id="user_pwd" name="user_pwd" value="">
     <input type="submit" value="注册">
-{#    <a onclick="a_onclick()" href="/login/{{ user_list }}">登陆</a>#}
+{#    <input type="submit" value="登陆">#}
     {{ index_meg }}
 </form>
 </body>
